# AutoReport2

./: README.md  analysis.py  data_loader.py  data_sources.py  main.py  pyproject.toml  report_generator.py
charts/: chart_generator.py
data/: sample.csv  sample.json
reports/: pdf_report.py
templates/: report.html
tests/: test_main.py
